--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true" >
 
         <activity
             android:name=".SplashscreenActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/MainAppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +27,18 @@
 
         <activity
             android:name=".MainMenuActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/MainAppTheme" >
+        </activity>
+
+        <activity
+            android:name=".PreferencesActivity"
+            android:label="@string/app_prefs_title"
+            android:theme="@style/PreferencesTheme" >
+            <intent-filter>
+                <action android:name=".Preferences" />
+                <category android:name="android.intent.category.PREFERENCE" />
+            </intent-filter>
         </activity>
     </application>
 
