--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,33 +12,34 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true" >
-
+        android:supportsRtl="true">
         <activity
             android:name=".SplashscreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/MainAppTheme" >
+            android:theme="@style/MainAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/app_name"
-            android:theme="@style/MainAppTheme" >
-        </activity>
-
+            android:theme="@style/MainAppTheme"></activity>
         <activity
             android:name=".PreferencesActivity"
             android:label="@string/app_prefs_title"
-            android:theme="@style/PreferencesTheme" >
+            android:theme="@style/PreferencesTheme">
             <intent-filter>
                 <action android:name=".Preferences" />
+
                 <category android:name="android.intent.category.PREFERENCE" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GraphActivity"
+            android:theme="@style/MainAppTheme">
         </activity>
     </application>
 
