--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,18 @@
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/app_name"
-            android:theme="@style/MainAppTheme"></activity>
+            android:theme="@style/MainAppTheme">
+
+        </activity>
         <activity
             android:name=".PreferencesActivity"
             android:label="@string/app_prefs_title"
-            android:theme="@style/PreferencesTheme">
+            android:theme="@style/PreferencesTheme"
+            android:parentActivityName=".MainMenuActivity" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainMenuActivity" />
             <intent-filter>
                 <action android:name=".Preferences" />
 
@@ -40,6 +47,15 @@
         <activity
             android:name=".GraphActivity"
             android:theme="@style/MainAppTheme">
+        </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@style/MainAppTheme">
+            <intent-filter>
+                <action android:name="${packageName}.AboutActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
     </application>
 
