--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
-
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +14,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-
         <activity
             android:name=".SplashscreenActivity"
             android:label="@string/app_name"
@@ -26,12 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/app_name"
             android:theme="@style/AppLightTheme" />
-
         <activity
             android:name=".PreferencesActivity"
             android:label="@string/app_prefs_title"
@@ -50,12 +46,11 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="ca.uoit.group.weather.WeatherReceiver"/>
+        <receiver android:name=".WeatherReceiver" />
 
         <activity
             android:name=".GraphActivity"
             android:theme="@style/AppLightTheme" />
-
         <activity
             android:name=".AboutActivity"
             android:theme="@style/AppLightTheme">
@@ -65,12 +60,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ManageCitiesActivity"
-            android:theme="@style/ActionBarLightTheme"
             android:label="@string/app_manage_cities_preference_title"
-            android:parentActivityName=".PreferencesActivity">
+            android:parentActivityName=".PreferencesActivity"
+            android:theme="@style/ActionBarLightTheme">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -83,10 +77,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AnalysisActivity"
             android:theme="@style/AppLightTheme" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
